--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">hse-android-lab-2</string>
+    <string name="edit_text_hint">Enter the product</string>
+    <string name="add_button">Add</string>
 </resources>
